# chess-annotator

./: .gitignore  CHANGELOG.md  DESIGN.md  IMPL_PLAN.md  README.md  chess-plan.py  chessbook.py  pyproject.toml  sample_config.yaml
chessplan/: __init__.py  __main__.py  block.py  bootstrap.py  game_annotations.py
chessplan/adapters/: __init__.py  cli.py  json_annotations.py  pgn_reader.py
chessplan/application/: __init__.py  services.py
chessplan/domain/: __init__.py  block.py  chess_book.py  game.py  game_annotations.py
chessplan/ports/: __init__.py  annotation_store.py  game_loader.py  ports.py
chessplan/use_cases/: __init__.py  chess_book.py  review_service.py
chessplan/usecases/: __init__.py
docs/: DESIGN.md  annotate-design.md  annotate-requirements.md  chess-book.md  cli_states.md  design.md  impl_plan.md  migrate_cli.md  migrate_to_api.md  openapi.yaml  render.md  screen-design.md  use-cases.md
docs/use-cases/: UC-001.md  UC-002.md  UC-003.md  UC-004.md  UC-005.md  UC-006.md  UC-007.md  UC-008.md  UC-009.md  UC-010.md  UC-011.md  UC-012.md  UC-013.md  UC-014.md  UC-015.md  UC-016.md
frontend/: app.css  app.js  index.html
plans/: annotate-impl.md  frontend-impl.md  frontend.md  render.md  render_impl.md
src/annotate/: __init__.py  config.py  render_cli.py  service.py
src/chess_annotate/: __init__.py  config.py
tests/: pdf_renderer_support.py  test_annotate_cli.py  test_annotate_service.py  test_annotate_web_app.py  test_block.py  test_build_segments.py  test_caption_text.py  test_chess_book.py  test_diagram_rendering.py  test_format_date.py  test_game_annotations.py  test_json_annotations.py  test_moves_text.py  test_package_exports.py  test_pdf_renderer.py  test_pgn_pdf_renderer.py  test_pgn_reader.py  test_render_pdf_smoke.py  test_review_service.py  test_subtitle_text.py
tests/adapters/: test_lichess_api_uploader.py  test_pgn_file_game_repository.py  (+1 more)
tools/: read_pgn.py  test1.py
(+126 files in other folders)
