[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-annotator"
version = "0.9.0"
description = "Tool for annotating chess games and rendering them as book-quality PDFs"
requires-python = ">=3.10"
dependencies = [
    "python-chess",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
render = ["reportlab", "svglib"]

[project.scripts]
chess-render = "annotate.render_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]

[tool.pytest.ini_options]
pythonpath = ["src"]
