[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-annotator"
version = "2.1.0"
description = "Tool for annotating chess games and rendering them as book-quality PDFs"
requires-python = ">=3.10"
dependencies = [
    "python-chess",
    "pyyaml",
    "reportlab",
    "svglib",
    "pytest",
    "pytest-cov",
]

[project.scripts]
chess-render = "render.adapters.render_cli:main"
chess-annotate = "annotate.adapters.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]

[tool.pytest.ini_options]
pythonpath = ["src"]
